cmake_minimum_required(VERSION 3.17)
project(basis)


add_subdirectory(source/app/acme)
add_subdirectory(source/console/helloearth)
add_subdirectory(source/app/apex)
add_subdirectory(source/app/aqua)
add_subdirectory(source/console/hellosolarsystem)
add_subdirectory(source/console/readlines)
add_subdirectory(source/app/aura)
add_subdirectory(archive/platform-windows/draw2d_gdiplus)
add_subdirectory(source/app/app)




